css/style.css
/* ... */
.track__square--blue{
  background-color:#00B0E2;
  width: 32px;
  height: 32px;
  border-radius: 5%;
  gap: 0.44rem;
}

.track__square--pink{
  background-color:#F6679C;
  width: 32px;
  height: 32px;
  border-radius: 5%;
  gap: 0.44rem;
}

.track__square--yellow{
  background-color:#FFB901;
  width: 32px;
  height: 32px;
  border-radius: 5%;
  gap: 0.44rem;
}

.email_button{
  width: 143px;
  display: flex;
  height: 2rem;
}

.track__email{
  background-color:#DE6262;
  color:white;
  width: 9rem;
  height:auto;
  margin-right: 0;
  flex-shrink: 0;
  padding:0;
  border: none;
}

button{
  background-color:#FFB901;; 
  width: 3rem;
  flex-shrink: 0;
  margin:0;
  position: relative;
  border: none;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;

}

::placeholder{
  color: white;
  padding-left: 5px;
}

input{
  border-radius: 5px 0 0 5px;
}

.colors{
  display: flex;
  align-items: flex-start;
  margin-bottom:0;
}


  /* ==========================================================================
     Base Mobile Screen
     ========================================================================== */
     
  @media screen and (max-width: 39.9375em){
/* Thea's code! Header Section */
    /* Top Banner Hide when Screen Smaller */
    .banner, .column,
    [hidden] {
      display: none !important;
    }

    /* make logo shift */
    .company__logo{
    position: absolute;
    display: block;
    }

    .page__intro {
      font-weight: lighter;
      text-align: center;
      font-size: 34px;
      padding: 5rem 2rem 2rem 2rem;
    }
   /*==================================
    Body Styles - Alyssa
  ==================================*/

  /*====Page Title====*/

  .page__intro {
    padding: 5rem 2rem 2rem;
  }
       /*==service items==*/

  .service__text {
    flex: 1;
  }
      .service__header {
        margin: auto auto 5px 5px;
      }

  .page-services{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
  }
  .service__icon {
    display: flex;

  }

  .service__item{
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .services__content {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    align-items: center;
    margin: 0 auto;
    gap: 10px;
  }

  /*====Gallery Section====*/

  .page-gallery {
    margin: 50px auto;
  }
    /*==Gallery content==*/
    .gallery__content {
      display: flex;
      justify-content: center;
      flex-direction: column;

    }
  /*====Clients section====*/
  .page-clients,
  [hidden] {
    display: none !important;
  }
    /*======================
          Sandy Footer
    ========================*/
     /* About us and instagram section hidden in mobile size */
  .about, .instagram,
  [hidden] {
    display: none !important;
  }
  footer {
    display: grid;
    grid-template-areas:
    "director"
    "track"
    "reviews";
  }
  .director{
    grid-area: director;
    margin-bottom: 0;
  }
  .director__info{
    display: flex;
    align-items: flex-start;
    gap: 1rem;
    width: 27rem;
    flex-shrink: 0;
    margin-top: 3rem;
  }
  .director__image{
    width: 8.66275rem;
    height: 7.49113rem;
    margin-top:0;
    flex-shrink: 0;
  }
  
  .director__caption{
    max-width: 15rem;
    flex-shrink: 0;
    font-size: 12px;
  }
  .profile__line {
    margin-left: 38%;
    margin-bottom: 5%;
  }
  .track{
    width: 15rem;
    height: 11rem;
    grid-area: track;
    margin: 0 15% 0 auto;
  }

  .reviews{
    width: 24.6875rem;
    height: 20.875rem;
    gap: 0.625rem;
    margin: auto;
    align-items: left;
    grid-area: reviews;
  }

  .reviews__heading{
    font-size: 0.9375rem;
    font-weight: 500;
  }

  .user{
    font-size: 0.5625rem;
    font-style: normal;
    font-weight: 700;
    line-height: 0.875rem;
  }
  
    .reviews__content{
      color: #FFF;
      font-family: "Open Sans";
      font-size: 0.5625rem;
      font-style: normal;
      font-weight: 700;
      line-height: 0.875rem;
    }

  .reviews__comment{
    align-self: stretch;
    width:24.6875rem;
    height:5.25rem;
  }
  .colors {
    margin-left: auto;
    margin-right: auto;
  }
  }
   /* ==========================================================================
      Media Query for Tablet
     ========================================================================== */
   @media screen and (min-width: 40em) {
 /*==================================
    Body Styles - Alyssa
  ==================================*/
    .page__intro {
      margin: 10% 2%;
    }
  /*====Services section====*/
  .page-services {
    margin-bottom: 10%;
    margin-top: 10%;
  }
  .services__content {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }
    .service__item {
      display: flex;
      flex-direction: column;
      align-items: center;
      margin: 10% auto;
    }
  .service__icon {
    margin-bottom: 10px;
  }
  .service__header {
    text-align: center;
  }
  .service__desc {
    margin: auto 5%;
  }

/*====News section====*/
.news__content {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: auto;
  align-items: center;
  gap: 10px;
  margin: 0 auto;
  max-width: 600px;
}
.news-item {
  width: 292px;
  height: 256px;
}
.news-priority {
  flex-grow: 2;
  grid-column: span 2;
  width: 600px;
  height: 360px;
}
article .news__picture {
  width: 600px;
  height: 360px;
}
.news__info {
max-width: 598px;
}
.news-item .news__info {
  height: 20%;
}

/*====Gallery section====*/
.gallery__content {
  display: grid;
  grid-template-columns: repeat(2, minmax(300px, 1fr));
  margin: 0 auto;
  max-width: 600px;
}
.gallery__image{
  width: 292px;
  height: 256px;
}
/*====Clients section====*/
.clients__content{
  display: grid;
  grid-template-columns: repeat(3, minmax(200px, 1fr));
  max-width: 600px;
  margin: 0 auto;
}
.logo__image {
  width: 190px;
  height: 128px;
}

}
/* ... */

